[tool.poetry]
name = "baixa-pra-mim"
version = "0.1.0"
description = ""
authors = ["João Vitor <joaovitorsantoscs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
isort = "^5.13.2"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.9"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "baixa_pra_mim"
]
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=baixa_pra_mim -vv"
post_test = "coverage html"